@@ -193,6 +193,8 @@ namespace ProcessHacker
         {
             if (p.IsBeingDebugged)
                 return Properties.Settings.Default.ColorBeingDebugged;
+            else if (p.ElevationType == Win32.TOKEN_ELEVATION_TYPE.TokenElevationTypeFull)
+                return Properties.Settings.Default.ColorElevatedProcesses;
             else if (Properties.Settings.Default.VerifySignatures &&
                 Properties.Settings.Default.ImposterNames.Contains(p.Name.ToLower()) &&
                 p.VerifyResult != Win32.VerifyResult.Trusted &&
@@ -213,8 +215,6 @@ namespace ProcessHacker
             else if (Program.HackerWindow.ProcessServices.ContainsKey(p.PID) &&
                 Program.HackerWindow.ProcessServices[p.PID].Count > 0)
                 return Properties.Settings.Default.ColorServiceProcesses;
-            else if (p.ElevationType == Win32.TOKEN_ELEVATION_TYPE.TokenElevationTypeFull)
-                return Properties.Settings.Default.ColorElevatedProcesses;
             else if (p.Username == "NT AUTHORITY\\SYSTEM")
                 return Properties.Settings.Default.ColorSystemProcesses;
             else if (p.Username == System.Security.Principal.WindowsIdentity.GetCurrent().Name)
