@@ -3,6 +3,8 @@ Process Hacker
 1.3.3.0
  * NEW:
    * Process termination now uses KProcessHacker
+   * Process Hacker can now use KProcessHacker under a limited user account if it is 
+     loaded, giving it full permissions anyway
    * CSR Processes tool - displays hidden processes (this does not detect Hacker 
      Defender but does detect simple kernel-mode rootkits)
    * Processes list in the notification icon menu, for quick actions on processes
@@ -15,6 +17,7 @@ Process Hacker
    * Around 50% reduction in CPU usage
    * GDI and USER handle counts
  * FIXED:
+   * Limited user account weirdness
    * Disables "Show one graph per CPU" if there is only one CPU
    * Process tree weirdness for users with limited privileges
    * "Require signatures for" names are now forced to be lower-case
